fixed width overflow of margins in the sets page

--- a/client/src/assets/css/sets.css
+++ b/client/src/assets/css/sets.css
@@ -23,6 +23,12 @@
 
 .row.set {
     width: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.row.set > a {
     display: flex;
     align-items: center;
 }
